--- a/src/docs/asciidoc/util/definitions.adoc
+++ b/src/docs/asciidoc/util/definitions.adoc
@@ -13,9 +13,9 @@
 :container:  pass:normal[ `@Container` ]
 :e1container: pass:normal[ `@E1Container` ]
 :e1immutable: pass:normal[ `@E1Immutable` ]
-:e1immutable: pass:normal[ `@E1Immutable` ]
 :e2container: pass:normal[ `@E2Container` ]
 :e2immutable: pass:normal[ `@E2Immutable` ]
+:ercontainer: pass:normal[ `@ERContainer` ]
 :exposed: pass:normal[ `@Exposed` ]
 :final:  pass:normal[ `@Final` ]
 :finalizer:  pass:normal[ `@Finalizer` ]
